Add weight moving average to API and CLI
