# api/src/WeightTracker.Api/Endpoints/Weights/Get/WeightsGetResponse.cs
@@ -5,4 +5,6 @@ internal sealed class WeightsGetResponse
     public WeightStats Stats { get; init; } = null!;
 
     public IEnumerable<WeightsEntryResponse> Data { get; init; } = [];
+
+    public WeightMovingAverage? MovingAverage { get; init; }
 }
